# apps/shop/views/products/one_product.py
@@ -3,25 +3,36 @@ from django.http import HttpResponse,HttpResponseRedirect,JsonResponse
 
 from apps.shop.models import GoodsModel,CommentOfGoodsModel,RatingOfGoodsModel
 from apps.shop.forms import CommentForm, RatingForm
+from apps.shop.serializers import CatalogSerializer
 
 from rest_framework.views import APIView
+from rest_framework.response import Response
 
 # Page of one product 
 class ProductView(APIView):
     def get (self,request,product_id):
         try:
-            product = GoodsModel.objects.get(id=product_id)
+            product = GoodsModel.objects.filter(id=product_id)
             comment = CommentOfGoodsModel.objects.filter(product=product_id).order_by('id')
             rating = RatingOfGoodsModel.objects.filter(product=product_id)
 
-            for i in rating:
-                 i += i
-            rating = i/len(rating)
+            product = [CatalogSerializer (instance=working_service).data for working_service in product]
 
         except:
                 return HttpResponseRedirect ("/404_error/")
         else:     
-            # template = loader.get_template("catalog/pizza.html")
+            if len(rating) > 0:
+                for i in rating:
+                    i += i
+                rating = i/len(rating)
+            else:
+                rating = "No Rating"
+            if len (comment) == 0:
+                comment = "No Comment" 
+
+            one_product = {'information':product, 'comment':comment, 'rating':rating}
+
+        # template = loader.get_template("catalog/pizza.html")
         # context = {
                 # "product" : product,
                 # "form_comment":CommentForm(),
@@ -32,7 +43,7 @@ class ProductView(APIView):
             # }
 
         # return HttpResponse(template.render(context,request))
-            return HttpResponseRedirect ("")
+        return Response ({"Product": one_product})
 
 
 
